# harbor

./: .env.example  .gitignore  Cargo.toml  README.md  devenv.nix  flake.nix
.woodpecker/: build.yaml
crates/cli/: .gitignore  Cargo.toml  build.rs  harbor.db
crates/cli/migrations/2026-07-13-221551-0000_create_tables/: down.sql  up.sql
crates/cli/src/: config.rs  lib.rs  main.rs
crates/cli/src/db/: mod.rs  models.rs  schema.rs
crates/cli/src/store/: mod.rs  sqlite.rs
crates/cli/tests/: lib_tests.rs
crates/crypto/: Cargo.toml
crates/crypto/src/: lib.rs
crates/server/: Cargo.toml
crates/server/src/: main.rs
website/: .dockerignore  Caddyfile  Dockerfile  package.json
website/src/: App.tsx  InstallApp.tsx  index.css  index.html  index.ts  install.html  install.tsx
website/styles/: globals.css
