[package]
name = "cli"
version = "1.0.0"
edition = "2024"
authors = ["idle_river <khokharmaaz@gmail.com>"]
description = "An opensource secrets management and distribution platform"
license = "GLP-3.0"

[dependencies]
tokio = { version = "1.52.3", features = ["full"] }
clap = { version = "4.6.1", features = ["derive", "cargo"] }
keyring = "4.1.4"
colored = "3.1.1"
git-version = "0.3"
