[package]
name = "cli"
version = "1.0.0"
edition = "2024"
authors = ["idle_river <khokharmaaz@gmail.com>"]
description = "An opensource secrets management and distribution platform"
license = "GLP-3.0"

[dependencies]
diesel = { version = "2.2.0", features = [
  "sqlite",
  "returning_clauses_for_sqlite_3_35",
  "chrono",
] }
clap = { version = "4.6.1", features = ["derive", "cargo"] }
tokio = { version = "1.52.3", features = ["full"] }
crypto = { path = "../crypto" }
keyring = "4.1.4"
colored = "3.1.1"
base64 = "0.22.1"
chrono = "0.4.45"
dotenvy = "0.15"
uuid = "1.23.5"
hex = "0.4"
